asteria/core/tests/errors/elaboration_errors/term_constructor_already_defined.asteriacore
data Unit where
   | MkUnit : Test$Unit()
   | MkUnit : Test$Unit()
   ;;
